<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="main_title">My Nanodegree Apps!</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="built_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_output">This button will launch my spotify streamer!</string>
    <string name="scores_output">This button will launch my scores app!</string>
    <string name="library_output">This button will launch my library app!</string>
    <string name="bigger_output">This button will launch my build it bigger app!</string>
    <string name="xyz_output">This button will launch my xyz reader app!</string>
    <string name="capstone_output">This button will launch my capstone app!</string>
</resources>
